Corrigidos erros de digitação

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <h1 id="title">Título principal</h1>
 
-    <h2 class="subtotle">Este é o segundo Título</h2>
+    <h2 class="subtitle">Este é o segundo Título</h2>
 
     <p id ="paragrafo">Este é o parágrafo!</p>  
 
@@ -20,6 +20,7 @@
         <li class="item">Item 3</li>
         <li class="item">Item 4</li>
     </ul>
+    
     <script src="js/scripts.js"></script>
 
 </body>
