--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .azul{
+        .azul {
             color: blue;
         }
-        .vermelho{
+
+        .vermelho {
             color: red;
         }
     </style>
 </head>
+
 <body>
+
     <ul>
         <li class="azul">Item</li>
         <li class="vermelho">Item</li>
@@ -22,7 +27,10 @@
         <li class="vermelho">Item</li>
     </ul>
 
+    <button onclick="trocarCores()">Trocar Cores</button>
+
     <script src="js/scripts.js"></script>
-    
+
 </body>
+
 </html>
